# TaskyCLI

./: README.md  pyproject.toml
src/: cli.py  tasks.JSON  test.py
src/TaskyCLI_RunjeetNarula.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/tasky/: __main__.py  tasks.JSON  tasky.py
src/tasky.egg-info/: PKG-INFO  SOURCES.txt
